[package]
name = "esp_bno055"
version = "0.1.0"
authors = ["Alex Bohm <aabohm7@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = { version = "0.2.0", features = ["smartled", "direct-boot"] }

esp-backtrace = { version = "0.2.0", features = [
    "esp32c3",
    "panic-handler",
    # "print-jtag-serial",
    "print-uart",
] }

riscv-rt = { version = "0.9", optional = true }
bno055 = "0.3.3"
mint = "0.5.9"
# littlefs2 = { version = "0.3.2", features = ["c-stubs"] }
embedded-sdmmc = "0.3.0"
heapless = "0.7.16"
smart-leds = "0.3.0"
esp-println = { version = "0.2.2", features = ["esp32c3"] }

# Patch until version is released.
# [patch.crates-io]
# riscv-atomic-emulation-trap = { git = "https://github.com/esp-rs/riscv-atomic-emulation-trap", version = "0.2.0", rev = "42a2505f1ad7b53fa1669ba52ab439c10c8bf81b" }

[features]
default = ["rt"]
rt = ["riscv-rt"]

[profile.dev]
debug = true
# lto = true
# opt-level = "s"
codegen-units = 1

[profile.release]
debug = true
lto = true
opt-level = "s"
codegen-units = 1
